# compliance-watch

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.pt-br.md  config.py  mcp_client.py  pipeline.py  pyproject.toml
agent/: investigacao_profunda.py
analysis/: preco_stats.py
core/: claude_client.py  run_conversation.py  run_tool.py  run_tools.py
docs/: architecture-decision.md  data-disclaimer.md  dev-setup.md  roadmap.md  testing.md
evaluation/: generate_dataset.py  run_eval.py
evaluation/graders/: code_grader.py  model_grader.py
extraction/: entities.py  pdf_reader.py  scanned_pages.py
frontend/: app.py  demo.html
frontend/static/: index.html  streaming_tools.js  style.css
mcp_server/: prompts.py  resources.py  server.py  tools.py
prompts/: exemplos_anomalia.py  system_auditor.py
prompts/templates/: aditivo.py  contrato.py  nota_fiscal.py
rag/: bm25_index.py  chunking.py  embeddings.py  retriever.py  vector_index.py
scripts/: generate_fixtures.py  smoke_test.py
tests/fixtures/: README.md
tools/: fornecedor.py  lista_bloqueio.py  preco_medio.py  schemas.py  web_search.py
